--- a/app/javascript/src/styles/specific/home.scss
+++ b/app/javascript/src/styles/specific/home.scss
@@ -3,6 +3,12 @@ body.c-static.a-home {
   background-color: var(--bg-color);
   background-image: var(--bg-image);
 
+  background-position-y: 3.75rem;
+
+  @include window-larger-than(800px) {
+    background-position-y: unset;
+  }
+
   #page {
     background: none;
     margin: 25rem auto 0;
@@ -20,7 +26,7 @@ body.c-static.a-home {
 
     padding: 1rem;
     margin: 0.5rem;
-    border-radius: 0.5rem;
+    border-radius: 0.25rem;
     text-align: center;
   }
 
@@ -82,7 +88,7 @@ body.c-static.a-home {
     justify-content: space-between;
     align-items: center;
 
-    border-radius: 0.5rem 0.5rem 0 0;
+    border-radius: 0.25rem 0.25rem 0 0;
 
     @include window-larger-than(480px) {
       margin: 0.5rem 0.5rem 0;
@@ -103,7 +109,7 @@ body.c-static.a-home {
     margin: 0;
     padding: 0.5rem;
 
-    border-radius: 0 0 0.5rem 0.5rem;
+    border-radius: 0 0 0.25rem 0.25rem;
 
     @include window-larger-than(480px) {
       margin: 0 0.5rem;
